[tool.poetry]
name = "pydawa"
version = "0.5.0"
description = "En API wrapper omkring Danmarks Adressers Web API"
authors = ["Daníel Örn Árnason <danielarnason85@gmail.com>"]
license = GPL-3.0-or-later
readme = README.md
url = https://github.com/danielarnason/pydawa.git

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pandas = "^1.0.3"
xlrd = "^1.2.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
